--- a/package.json
+++ b/package.json
@@ -39,11 +39,11 @@
   "devDependencies": {
     "@types/figlet": "^1.2.0",
     "@types/lodash": "^4.14.154",
-    "@types/node": "^14.0.6",
+    "@types/node": "^14.0.9",
     "@types/redis": "^2.8.22",
     "@types/yargs": "^15.0.5",
-    "@typescript-eslint/eslint-plugin": "^3.0.2",
-    "@typescript-eslint/parser": "^3.0.2",
+    "@typescript-eslint/eslint-plugin": "^3.1.0",
+    "@typescript-eslint/parser": "^3.1.0",
     "eslint": "^7.1.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-config-prettier": "^6.11.0",
@@ -66,6 +66,7 @@
     "pm2": "^4.4.0",
     "redis": "^3.0.2",
     "rotating-file-stream": "^2.1.1",
+    "strict-event-emitter-types": "^2.0.0",
     "technicalindicators": "^3.1.0",
     "winston": "^3.2.1",
     "yargs": "^15.3.1"
