--- a/.envrc.prod
+++ b/.envrc.prod
@@ -1,3 +1,3 @@
 export REDIS_URL="redis://localhost:6379"
 export DATA_DIR="$(pwd)/data"                      # CHANGE ME
-export PAIRS="BTC_USDT BTC_USD ETH_USDT ETH_USD"   # For all pairs please see exchange_pairs.js
+export PAIRS=""                                    # pairs to crawl, empty means to crawl all pairs in exchange_pairs.js
